# lanhe-ccs-reader-cli

./: .gitignore  README.md  pyproject.toml
samples/: AA.ccs  BB.ccs  CC.ccs
src/ccs_reader/: __init__.py  cli.py  parser.py  validate.py
tests/: test_ccs_samples.py
